Fixed DefaultTableModel dataVector signature (Vector<Vector>) Replaced new Double(val) by Double.valueOf(val)